# quill-cast

./: CHANGELOG.md  README.md  launcher.py  pyproject.toml  quill-cast.spec  run-quill-cast.bat
docs/: prd.epub  prd.html  prd.md  release-notes-1.0.epub  release-notes-1.0.html  release-notes-1.0.md  userguide.epub  userguide.html  userguide.md
installer/: quill-cast.iss
quill_cast/: __init__.py  __main__.py
scripts/: build_exe.ps1  build_installer.ps1  build_release.ps1
